2016-05-14  Charlie Zender  <zender@uci.edu>

	* Support reporting _NCProperties, _IsNetcdf4, _SuperblockVersion in netCDF 4.4.1+

2016-05-12  Charlie Zender  <zender@uci.edu>

	* Remove ncremap step to fix lon in HIRDLS/MLS files since ncpdq now works as expected

	* Fix ncclimo regression test (sought non-existent area variable) and new ncap2 regression test (sought mis-spelled file)

	* NCO 4.6.0 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.0 final changes';git push
	git tag -a 4.6.0 -m 'Version 4.6.0 new features: ncclimo, ncap2	vlists, climatology bounds, CF, terraref, ncpdq fixes';git push --tags

2016-05-12  Henry Butowsky  <henryb@hush.com>

	* Fix nasty bug in out()/att(hyperslab) action for NC_STRING that caused double free() on clang

2016-05-11  Charlie Zender  <zender@uci.edu>

	* Allow for "coordinates"-ordering opposite to storage (LRV->MRV) order, e.g., "coordinates=[longitude,latitude]" instead of "coordinates=[longitude,latitude]"

2016-05-09  Charlie Zender  <zender@uci.edu>

	* Shorten unique name suffix in ncremap

	* Add -V var_rgr option to ncremap to invoke --rgr_var=var_rgr for CF grid inferral and remapping

2016-05-06  Charlie Zender  <zender@uci.edu>

	* Pedro committed ncpdq patches that fix vexing longstanding problems permuting in group hierarchies

2016-05-05  Henry Butowsky  <henryb@hush.com>

	* Add space ' ' to allowed chars in a quoted var or att which can be:
	  VAR_NM_QT: (LPHDGT|'-'|'+'|'.'|'('|')'|':'|' ' )+  ;
	  Full NetCDF specification for ID includes UTF8 characters (save that for another day)

2016-05-04  Charlie Zender  <zender@uci.edu>

	* Fix nces tabs regression test

2016-05-03  Charlie Zender  <zender@uci.edu>

	* Successfully used CF-coordinate method in both nco_rgr_map() and nco_grd_nfr() when triggered by --rgr_var option

	* Improve and simplify nco_grd_nfr() logic for grid determination, introduce and respect lon_dmn and lat_dmn options for dimension names
